--- a/lens/src/scss/home/actualites.scss
+++ b/lens/src/scss/home/actualites.scss
@@ -1,5 +1,4 @@
 .sectionnews {
-    z-index: 1;
     .swiper-slide {
     .swiper_date, .swiper_title {
         width: 100%;
