--- a/lens/src/scss/home/quick.scss
+++ b/lens/src/scss/home/quick.scss
@@ -1,5 +1,4 @@
 .sortable-section.sectionlinks.quick-access {
-    z-index: 1;
     padding-top: 1rem;
 }
 #container-section-acces-directs {
